2.1.1/_sources/gallery/units/units_sample.rst.txt


.. _sphx_glr_gallery_units_units_sample.py:


======================
Inches and Centimeters
======================

The example illustrates the ability to override default x and y units (ax1) to
inches and centimeters using the `xunits` and `yunits` parameters for the
`plot` function. Note that conversions are applied to get numbers to correct
units.

.. only:: builder_html

   This example requires :download:`basic_units.py <basic_units.py>`





.. image:: /gallery/units/images/sphx_glr_units_sample_001.png
    :align: center





.. code-block:: python

    from basic_units import cm, inch
    import matplotlib.pyplot as plt
    import numpy as np

    cms = cm * np.arange(0, 10, 2)

    fig = plt.figure()

    ax1 = fig.add_subplot(2, 2, 1)
    ax1.plot(cms, cms)

    ax2 = fig.add_subplot(2, 2, 2)
    ax2.plot(cms, cms, xunits=cm, yunits=inch)

    ax3 = fig.add_subplot(2, 2, 3)
    ax3.plot(cms, cms, xunits=inch, yunits=cm)
    ax3.set_xlim(3, 6)  # scalars are interpreted in current units

    ax4 = fig.add_subplot(2, 2, 4)
    ax4.plot(cms, cms, xunits=inch, yunits=inch)
    ax4.set_xlim(3*cm, 6*cm)  # cm are converted to inches

    plt.show()

**Total running time of the script:** ( 0 minutes  0.068 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: units_sample.py <units_sample.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: units_sample.ipynb <units_sample.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
